# glitch

./: CMakeLists.txt  README.md
include/: glitch.h
libs/cvkm/: cvkm.h
src/: glitch.c  index.html  tests.c
